# spa

./: .gitmodules  CMakeLists.txt  FAQ.md  README.md  checklist.md  spa.pc.in
cmake/: init_project.txt  process_project.txt
cmake/modules/: spa-config.cmake
doc/: design.md
examples/: CMakeLists.txt  osc-host.cpp  osc-plugin.cpp
include/: CMakeLists.txt
include/rtosc/include/rtosc/: pseudo-arg-val-math.h  pseudo-rtosc.h
include/rtosc/src/: arg-val-math.cpp  rtosc.cpp
include/spa/: audio.h  audio_fwd.h  spa.h  spa_fwd.h
src/: CMakeLists.txt  audio.cpp  spa.cpp
